[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "monsoon-textile-volatility"
version = "2.0.0"
description = "Causal ML pipeline predicting NSE textile stock volatility from IMD monsoon rainfall deficits"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Monsoon-Textile Research Team"},
]
keywords = ["monsoon", "textile", "volatility", "causal-ml", "nse", "india"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["monsoon_textile_app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
